[package]
name = "bdk_message_signer"
version = "0.1.0"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk-message-signer"
documentation = "https://docs.rs/bdk_message_signer"
description = "BIP-322 Generic Signed Message Format implementation for BDK"
keywords = ["bitcoin", "wallet", "bip322", "signing", "message"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85.0"
readme = "README.md"

[dependencies]
bitcoin = { version = "0.32.6", default-features = false }
bdk_wallet = { version = "2.1.0", features = ["std"], default-features = false }

[dev-dependencies]
bdk_wallet = { version = "2.1.0", features = ["test-utils"] }

[features]
default = ["std"]
std = []
